--- a/WISDEM/IEA-15-240-RWT.yaml
+++ b/WISDEM/IEA-15-240-RWT.yaml
@@ -673,14 +673,22 @@ assembly:
         turbulence_class: B
         rotor_diameter: 240.0
         drivetrain: PM_DIRECT_DRIVE
+        orientation: UPWIND
         cone_angle: 4.0
         tilt_angle: 6.0
+        tip_prebend: 4.0
         number_of_blades: 3
         overhang: 10.454
         hub_height: 150.0
         hubD: 6.0
         gen_eff: 0.9655
         number_bearings: 2
+        tower_baseD: 10
+        tower_top_to_shaft: 2.927
+        tower_top_to_nacelle: 0.385
+        monopile_baseD: 10
+        monopile_embedment: 45
+        transition_height: 20
     mass:
         generator: 371.95
         nose: 12.947
@@ -692,6 +700,12 @@ assembly:
         other: 50.0
         blade: 68.0
         hub: 188.0
+        nacelle_other: 100.0
+        nacelle: 615.537
+        rna: 1189.82
+        rna_center_of_mass: [-1.06144039, 0.0, 0.8916053]
+        tower: 922.58745611328
+        monopile: 2319.41429420043
     control:
         Vin: 3.0
         Vout: 25.0
@@ -701,6 +715,8 @@ assembly:
         pitch: 0.
         maxTS: 95.
         Vrated: 10.56
+        variable_speed: True
+        IPC: False
 
 
 
